# biome

./: .beaker.conf.template  .gitattributes  .gitignore  .gitmodules  Caddyfile  Dockerfile  LICENSE  README.md  archytas-1.3.11-py3-none-any.whl  bdf.yaml  beaker_kernel-1.9.0a2-py3-none-any.whl  beaker_kernel-1.9.0a5-py3-none-any.whl  build-update-local.sh  docker-compose.yaml  entrypoint.sh  env.sample  init_biome.sh  init_submodules.sh  integrations  pyproject.toml
.github/workflows/: bdf_validate.yml  build-wheel.yml.disabled  deploy-changes.yml  main.yml  update-server.yml
adhoc_data/prompts/: README.CDA.md  README.CLINVAR.QUERIES.md  README.DRS.URLS.md  README.LITREVIEW.md  agent_prompt.md
api/: .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yaml  env.sample  pyproject.toml  server_log_config.ini
api/api/: job_queue.py  seed_sources.py  server.py  settings.py
api/scraped_examples/: Cancer_Data_Service_0.json  Cancer_Data_Service_2.json  Cancer_Data_Service_3.json  Cancer_Data_Service_4.json  Cancer_Research_Data_Commons_0.json  Cancer_Research_Data_Commons_1.json  Cancer_Research_Data_Commons_3.json  Cancer_Research_Data_Commons_5.json  Clinical_and_Translational_Data_Commons_0.json  Genomic_Data_Commons_0.json  Genomic_Data_Commons_1.json  ISB_Cancer_Gateway_in_the_Cloud_1.json  Imaging_Data_Commons_1.json  Imaging_Data_Commons_2.json  Imaging_Data_Commons_3.json  Imaging_Data_Commons_4.json  Proteomic_Data_Commons_1.json  Seven_Bridges_Cancer_Genomics_Cloud_0.json  Seven_Bridges_Cancer_Genomics_Cloud_2.json
api/sourceman/: ocr.py  rq_settings.py  scan_uri_job.py  server.py  settings.py
api/sourceman/gpt_scraper/: main.py  scrape_schema.py
backend/: .gitignore  README.md  pyproject.toml  server_log_config.ini
backend/api/: datasources_schema.json  globalState.py  seed_sources.py  seeds.json  server.py
backend/api/routers/: jvoy_api.py  koro_api.py  lib_api.py
backend/docker/: Dockerfile.api  Dockerfile.jvoy  Dockerfile.worker
backend/docker/api/: Dockerfile
backend/docker/workers/: Dockerfile  Dockerfile.jvoy
backend/lib/: api_clients.py  browser_pool.py  job_queue.py  models.py  settings.py  storage.py  vpn.py
backend/lib/gpt_scraper/: schema.py  scraper.py  websource.py
backend/lib/job_manager/: __init__.py  job_manager.py
backend/lib/job_runner/: __init__.py  job_runner.py
backend/lib/sources_db/: __init__.py  datasources_schema.json  sources_db.py
backend/lib/storage/: __init__.py  datasources_schema.json  storage.py
backend/tests/: test_scrape.py
backend/worker/: jobs.py  rq_configuration.py  settings.py
backend/worker/jobs/: scrape.py
chat-ui/: Dockerfile  archytas-1.3.4a0-py3-none-any.whl  beaker-kernel-1.6.8.tgz  docker-compose.yaml  package-lock.json  package.json  vue.config.js
chat-ui/beaker-biome/: pyproject.toml
chat-ui/beaker-biome/src/beaker_biome/biome/: agent.py  api_agent.yaml  apis.yaml  cache.py  context.py  yaml_loader.py
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/: readme.md
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/cbioportal/: api.yaml
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/cbioportal/documentation/: examples.md
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/cda/: api.yaml
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/gdc/: api.yaml
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/gdc/documentation/: examples.md  gdc.md
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/idc/: api.yaml
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/idc/documentation/: examples.md
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/indra/: api.yaml
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/indra/documentation/: examples.md
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/pdc/: api.yaml
chat-ui/beaker-biome/src/beaker_biome/biome/api_definitions/pdc/documentation/: examples.md
chat-ui/beaker-biome/src/beaker_biome/biome/api_documentation/: cda.json  example-run.ipynb  gdc.md  idc.md  indra.json  pdc_schema.graphql
chat-ui/beaker-biome/src/beaker_biome/biome/procedures/python3/: extract_references.py  general_api_request.py  generic_convert.py  get_studies.py  override_dataset.py  register_dataset.py  retrieve_dataset.py  set_input_dataset.py
chat-ui/beaker-biome/src/beaker_biome/integrations/: gdc_facet_extraction.py
chat-ui/src/: AnalystJobNotificationCell.vue  BiomeJob.ts  ChatInterface.vue  JobTracker.vue  JobTrackerLogs.vue  chat-interface.ts  dev-interface.ts  notebook-interface.ts
data/census-ahs/: census_ahs_codebook.csv  survey_1999.csv  (+7 more)
docs/: api_integrations.md
gpt-scraper/: pyproject.toml
gpt-scraper/gpt_scraper/: main.py  scrape_schema.py
notebook/: env.sample  package-lock.json  package.json  vue.config.js
recorder/: .gitignore  README.md  electron-builder-config.json  electron.js  index.html  package-lock.json  package.json  preload-local.js  preload-view.js  preload.js  vite.config.ts
rest_api/: Dockerfile  mcp_config.json  mcp_server.py  pyproject.toml  readme.md
rest_api/biome_rest/: integrations.py  main.py
src/: beaker_kernel-1.7.4a1-py3-none-any.whl  docker-compose.yaml  package.json
ui/: package-lock.json  package.json
workers/: .gitignore  Dockerfile  README.md  pyproject.toml
workers/output/: scrape_results.json
workers/scraped_examples/: Cancer_Data_Service_0.json  Cancer_Data_Service_1.json  Cancer_Research_Data_Commons_2.json  Cancer_Research_Data_Commons_4.json  Clinical_and_Translational_Data_Commons_0.json  Clinical_and_Translational_Data_Commons_1.json  GDC_0.json  ISB_Cancer_Gateway_in_the_Cloud_0.json  ISB_Cancer_Gateway_in_the_Cloud_2.json  Imaging_Data_Commons_0.json  Imaging_Data_Commons_3.json  Proteomic_Data_Commons_0.json  Proteomic_Data_Commons_2.json  Seven_Bridges_Cancer_Genomics_Cloud_1.json  sample_html.html
workers/tests/: test_scrape.py
workers/workers/: api_clients.py  scan_uri_job.py  settings.py
workers/workers/gpt_scraper/: gpt_scraper.py
(+316 files in other folders)
