[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biome"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matthew Printz", email = "matt@jataware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker-kernel~=1.9.0",
  "archytas~=1.3.11",
  "requests",
  "google-generativeai",
  "PyYAML",
  "adhoc-api~=1.0.0",
  "idc-index",
  "seaborn",
  "biopython",
  "boto3",
  "google-cloud-storage",
  "PyPDF2~=3.0.1",
]

[project.urls]
Documentation = "https://github.com/unknown/biome#readme"
Issues = "https://github.com/unknown/biome/issues"
Source = "https://github.com/unknown/biome"

[tool.hatch.version]
path = "src/biome/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/biome tests}"

[tool.coverage.run]
source_pkgs = ["biome", "tests"]
branch = true
parallel = true
omit = [
  "src/biome/__about__.py",
]

[tool.coverage.paths]
biome = ["src/biome", "*/biome/src/biome"]
tests = ["tests", "*/biome/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.beaker]
require-runtime-dependencies = true
