[tool.poetry]
name = "sourceman"
version = "0.2.0"
description = ""
authors = ["Team Jataware <joel@jataware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.33.11"
fastapi = "^0.104.1"
pydantic-settings = "^2.1.0"
rq = "1.10.0"
uvicorn = "^0.24.0.post1"
openai = "^1.14.2"
requests = "^2.31.0"
selenium = "^4.18.1"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
scan_url = "sourceman.scanner:tryit"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
