[tool.poetry]
name = "gpt-scraper"
version = "0.1.0"
description = ""
authors = ["Jataware <joel@jataware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.14.2"
requests = "^2.31.0"
selenium = "^4.18.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
