[tool.poetry]
name = "workers"
version = "0.0.1"
description = "Runs scraping and other helper jobs using RQ queues"
authors = ["Team Jataware <joel@jataware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rq = "1.10.0"
pydantic-settings = "^2.1.0"
openai = "^1.14.2"
requests = "^2.31.0"
selenium = "^4.18.1"
python-dotenv = "^1.0.1"
elasticsearch = "^8.13.0"

[tool.poetry.scripts]
scan_url = "workers.scan_uri_job:test_task"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
