[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaker-biome"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matthew Printz", email = "matt@jataware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "beaker-kernel~=1.8.4",
  "archytas~=1.3.5",
  "requests",
  "google-generativeai",
  "PyYAML",
  "adhoc-api~=0.2.9",
  "idc-index",
  "seaborn",
  "biopython",
  "boto3",
  "google-cloud-storage",
]

[project.urls]
Documentation = "https://github.com/unknown/beaker-biome#readme"
Issues = "https://github.com/unknown/beaker-biome/issues"
Source = "https://github.com/unknown/beaker-biome"

[tool.hatch.version]
path = "src/beaker_biome/__about__.py"

[tool.hatch.build]
require-runtime-dependencies = true


[tool.hatch.build.hooks.beaker]



[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/beaker_biome tests}"

[tool.coverage.run]
source_pkgs = ["beaker_biome", "tests"]
branch = true
parallel = true
omit = [
  "src/beaker_biome/__about__.py",
]

[tool.coverage.paths]
beaker_biome = ["src/beaker_biome", "*/beaker-biome/src/beaker_biome"]
tests = ["tests", "*/beaker-biome/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
